// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover renders a closed dropdown 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  cursor: pointer;
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1>div:focus {
  outline: none;
}

.emotion-1:focus>div {
  outline-color: Highlight;
  outline-width: thin;
}

@media (-webkit-min-device-pixel-ratio: 0) {
  .emotion-1:focus>div {
    outline-color: -webkit-focus-ring-color;
    outline-style: auto;
    outline-width: unset;
  }
}

<div
    class="emotion-0"
  >
    <div>
      <button
        aria-expanded="false"
        aria-owns="dropdown1"
        class="emotion-1"
        type="button"
      >
        <div
          tabindex="-1"
        >
          Dropdown trigger
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover renders a dropdown with a max width and max height 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  cursor: pointer;
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1>div:focus {
  outline: none;
}

.emotion-1:focus>div {
  outline-color: Highlight;
  outline-width: thin;
}

@media (-webkit-min-device-pixel-ratio: 0) {
  .emotion-1:focus>div {
    outline-color: -webkit-focus-ring-color;
    outline-style: auto;
    outline-width: unset;
  }
}

<div
    class="emotion-0"
  >
    <div>
      <button
        aria-expanded="false"
        aria-owns="dropdown3"
        class="emotion-1"
        type="button"
      >
        <div
          tabindex="-1"
        >
          Dropdown trigger
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popover renders an open dropdown 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  cursor: pointer;
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1>div:focus {
  outline: none;
}

.emotion-1:focus>div {
  outline-color: Highlight;
  outline-width: thin;
}

@media (-webkit-min-device-pixel-ratio: 0) {
  .emotion-1:focus>div {
    outline-color: -webkit-focus-ring-color;
    outline-style: auto;
    outline-width: unset;
  }
}

<div
    class="emotion-0"
  >
    <div>
      <button
        aria-expanded="true"
        aria-owns="dropdown2"
        class="emotion-1"
        type="button"
      >
        <div
          tabindex="-1"
        >
          Dropdown trigger
        </div>
      </button>
    </div>
    <div />
  </div>
</DocumentFragment>
`;
